<resources>
    <string name="app_name">Trend-ui-kit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="company_name">TREND</string>
    <string name="sologan">Fashion. Fresh. For Everyone</string>
    <string name="policy"><p>By creating an account you agree to our <br /><font color="white"> User Agreement</font> and <font color="white">Privacy policy</font></p></string>

    <string name="some_error">Some Error Occurred!</string>

    <string name="login">Login</string>
    <string name="create_an_account">Create an account</string>
    <string name="create_account">Create account</string>
    <string name="sign_out">Sign out</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="email">E-mail</string>
    <string name="welcome">Welcome back!</string>
    <string name="toolbar_title">Title</string>
    <string name="toolbar_navigation_close_description">Close demo</string>

    <string name="shop_name">Shop</string>
    <string name="orders_name">Orders</string>
    <string name="explore_name">Explore</string>
    <string name="comment_name">Comment</string>
    <string name="search">Search</string>
    <string name="edit_profile">Edit profile</string>
    <string name="search_hint">Search...</string>
    <string name="trends">Trends</string>
    <string name="feed">Feed</string>
    <string name="time_test">◷ 9h</string>
    <string name="sample_text">Isaace Peterson</string>
    <string name="long_sample_text" translatable="false">
    \t\tLorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a, ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.
    \n\n\t\tSuspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae, molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor bibendum, vel congue leo egestas.
    \n\n\t\tSed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel, molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula, in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque est.
    \n\n\t\tAenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh. Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc, quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus convallis.
    \n\n\t\tPhasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper, libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
  </string>
    <string name="sample_time">9h</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="attachment_items">attachment items</string>
    <string name="filter">Filter</string>
    <string name="cart">Cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="continue_order">Continue Order</string>
    <string name="sort">Sort</string>
    <string name="most_popular">Most popular</string>
    <string name="most_view">Most view</string>
    <string name="most_recent">Most recent</string>
    <string name="type">Type</string>
    <string name="unisex">Unisex</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="price">Price</string>
    <string name="show_items">Show items</string>
    <string name="size">Size</string>
    <string name="xs_size">XS</string>
    <string name="s_size">S</string>
    <string name="m_size">M</string>
    <string name="l_size">L</string>
    <string name="xl_size">XL</string>
    <string name="color">Color</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="active">Active</string>
    <string name="history">History</string>
    <string name="specifications">Specifications</string>
    <string name="architeture">Architeture</string>
    <string name="show_more">Show more...</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="order_no">Order No:</string>
    <string name="track">Track:</string>
    <string name="order_delivered">Order delivered</string>
    <string name="estimated_time">Estimated delivery date:</string>
    <string name="order_on_delivery">Order on delivery</string>
    <string name="processed">Processed</string>
    <string name="or">or</string>
    <string name="hint_comment">some text ...</string>
    <string name="exit_text">Please click BACK again to exit</string>
    <string name="login_error">Login failed!</string>
    <string name="login_invalid">Login invalid</string>
    <string name="signup_invalid">Signup Invalid</string>
    <string name="article">Article Demo</string>

</resources>
