<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/d230"
    android:layout_marginTop="@dimen/d10"
    android:layout_marginRight="@dimen/d10"
    android:layout_marginLeft="@dimen/d5"
    android:layout_marginBottom="@dimen/d5"
    app:cardElevation="@dimen/d5"
    app:cardCornerRadius="@dimen/d5">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMain"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_weight="1">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imv_profile"
                android:layout_width="@dimen/d65"
                android:layout_height="@dimen/d65"
                android:layout_marginTop="@dimen/d30"
                android:src="@drawable/img_profile"/>
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/d20"
                android:layout_marginLeft="@dimen/d20"
                android:layout_marginTop="@dimen/d10"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/font_size_11"
                android:textAlignment="center"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:textAllCaps="true"
                android:text="@string/sample_text"
                tools:text="@tools:sample/full_names" />
            <TextView
                android:id="@+id/tv_followers_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d10"
                android:textColor="@color/hint_color"
                android:textSize="@dimen/font_size_11"
                android:textAllCaps="true"
                android:text="15.1k"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/hint_color"
                android:layout_marginTop="@dimen/d3"
                android:textSize="@dimen/font_size_9"
                android:textAllCaps="true"
                android:text="Followers"
                android:textAlignment="center"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_follow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_bottom_rounded"
            android:layout_gravity="bottom"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_13"
            android:text="@string/follow"/>
        <Button
            android:id="@+id/btn_unfollow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_bottom_rounded_blue"
            android:layout_gravity="bottom"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size_13"
            android:visibility="gone"
            android:text="@string/following"/>
    </LinearLayout>
</android.support.v7.widget.CardView>