<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_profile_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/d10"
        android:background="@color/background_color"
        tools:listitem="@layout/item_feed_blogger"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
    </android.support.v7.widget.RecyclerView>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d400"
        android:background="@color/colorWhite">
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/TextAppearance.Collapsing.SectionTitle"
            app:contentScrim="@color/colorMain"
            app:expandedTitleGravity="center"
            app:expandedTitleMarginBottom="24dp"
            app:expandedTitleTextAppearance="@style/TextAppearance.Collapsing.ExpandedTitle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@color/colorMain"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"/>
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d50"
                app:navigationIcon="@drawable/ic_back"
                app:layout_collapseMode = "pin"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imv_profile"
                android:layout_width="@dimen/d110"
                android:layout_height="@dimen/d110"
                android:layout_marginTop="@dimen/d60"
                android:layout_gravity="top|center_horizontal"
                android:src="@drawable/img_profile"
                app:layout_collapseMode="parallax"/>
            <TextView
                android:id="@+id/tv_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d230"
                android:layout_marginLeft="@dimen/d50"
                android:layout_marginRight="@dimen/d50"
                android:textAlignment="center"
                android:layout_gravity="top|center_horizontal"
                android:textColor="@color/hint_color"
                android:textSize="@dimen/font_size_13"
                android:textAllCaps="true"
                android:ellipsize="marquee"
                android:maxLines="2"
                android:text="@string/long_sample_text"
                app:layout_collapseMode="parallax"
                tools:text="@tools:sample/lorem/random"/>
            <TextView
                android:id="@+id/tv_followers_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/d85"
                android:layout_gravity="bottom|center_horizontal"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/font_size_13"
                android:text="15.1k followers"
                app:layout_collapseMode="parallax"
                tools:text="15.1k followers"/>
            <Button
                android:id="@+id/btn_following"
                android:layout_width="@dimen/d150"
                android:layout_height="@dimen/d40"
                android:layout_marginBottom="@dimen/d30"
                android:text="@string/following"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:layout_gravity="bottom|center_horizontal"
                android:textSize="@dimen/font_size_12"
                android:background="@drawable/bg_btn_blue"
                app:layout_collapseMode="parallax"/>
            <Button
                android:id="@+id/btn_follow"
                android:layout_width="@dimen/d150"
                android:layout_height="@dimen/d40"
                android:layout_marginBottom="@dimen/d30"
                android:layout_gravity="bottom|center_horizontal"
                android:text="@string/follow"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_size_12"
                android:visibility="gone"
                android:background="@drawable/btn_bg_round_white"
                app:layout_collapseMode="parallax"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>